Fix for long file name issue